# anti_cf

./: .gitignore  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: auto-merge-dependabot-pr.yml  build.yml  release.yml
src/anti_cf/: __init__.py  _constants.py  _flaresolverr.py  _persistent_session.py
tests/: conftest.py  test_flaresolverr.py  test_integration.py  test_persisted_session.py
